--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Subhadeep-coder/status-code#readme",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "@langchain/community": "^0.2.31",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
