--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npx tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
