--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,19 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npx tsc",
+    "build": "npm install && npx tsc",
     "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Subhadeep-coder/status-code.git"
+    "url": "git+https://github.com/Subhadeep-coder/Compify.git"
   },
   "author": "Subhadeep Dhar",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Subhadeep-coder/status-code/issues"
+    "url": "https://github.com/Subhadeep-coder/Compify/issues"
   },
-  "homepage": "https://github.com/Subhadeep-coder/status-code#readme",
+  "homepage": "https://github.com/Subhadeep-coder/Compify#readme",
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
